--- a/app/src/main/res/layout/activity_quiz_question.xml
+++ b/app/src/main/res/layout/activity_quiz_question.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".quiz.QuizQuestionActivity">
 
     <TextView
-        android:id="@+id/tv_question_id"
+        android:id="@+id/textview_quiz_question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -15,7 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.2" />
 
     <LinearLayout
         android:layout_width="400dp"
@@ -29,25 +29,21 @@
         app:layout_constraintVertical_bias="0.95">
 
         <Button
-            android:id="@+id/btn_answer_1_id"
+            android:id="@+id/button_quiz_answer_1"
             android:layout_width="match_parent"
             android:layout_height="80dp" />
-
         <Button
-            android:id="@+id/btn_answer_2_id"
+            android:id="@+id/button_quiz_answer_2"
             android:layout_width="match_parent"
             android:layout_height="80dp" />
-
         <Button
-            android:id="@+id/btn_answer_3_id"
+            android:id="@+id/button_quiz_answer_3"
             android:layout_width="match_parent"
             android:layout_height="80dp" />
-
         <Button
-            android:id="@+id/btn_answer_4_id"
+            android:id="@+id/button_quiz_answer_4"
             android:layout_width="match_parent"
             android:layout_height="80dp" />
     </LinearLayout>
-
 
 </android.support.constraint.ConstraintLayout>
