--- a/app/src/main/res/layout/waypoint.xml
+++ b/app/src/main/res/layout/waypoint.xml
@@ -9,12 +9,9 @@
         android:layout_width="4dp"
         android:layout_height="match_parent"
         android:layout_marginStart="24dp"
-        android:layout_marginBottom="2dp"
         android:background="#38ceff"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/dot"
