--- a/app/src/main/res/layout/waypoint.xml
+++ b/app/src/main/res/layout/waypoint.xml
@@ -7,9 +7,10 @@
     <View
         android:id="@+id/timeline"
         android:layout_width="4dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="24dp"
         android:background="#38ceff"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,10 +31,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
